# obs-scene-notes-dock

./: CMakeLists.txt  README.md  buildspec.json  installer.iss.in  scene-notes-dock.cpp  scene-notes-dock.hpp
.github/workflows/: build.yml
CI/macos/: scene-notes-dock.pkgproj
data/locale/: en-US.ini  pt-BR.ini
